--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,6 @@ env:
 
 jobs:
   PHPUnit:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
     steps:
-      - name: Check systemdpir
+      - name: Check systemdir
         run: check.php
