--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ env:
 
 jobs:
   PHPUnit:
-    runs-on: linux
+    runs-on: ubuntu-22.04
     steps:
       - name: Check systemdir
         run: check.php
