--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,12 @@ jobs:
         uses: actions/checkout@v4
       - name: ls
         run: ls
-      - name: Check systemdir
+      - name: Setting up PHP ${{ matrix.php }}
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          ini-values: max_input_vars=5000
+          tools: composer
+          coverage: none
+      - name: Run code
         run: php check.php
